objects/Case_Article_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Article_shadow__c</fullName>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Case_Articles_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Articles</relationshipLabel>
        <relationshipName>Case_Articles_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case-Article Relationship</label>
    <nameField>
        <displayFormat>CArtJct-{0000000}</displayFormat>
        <label>Case Article Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case-Articles Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>